# apple-app-mcp

./: AGENTS.md  CALENDAR.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  MAIL.md  README.md  mkdocs.yml  pyproject.toml  server.calendar.json  server.mail.json
.github/workflows/: docs.yml  lint.yml  release.yml
benchmarks/: __init__.py  charts.py  competitors.py  run.py  setup.sh
docs/: architecture-deep-dive.md  architecture.md  benchmarks.md  configuration.md  getting-started.md  index.md  installation.md  mcp-client-setup.md  profiling.md  search.md  tools.md  troubleshooting.md
docs/superpowers/plans/: 2026-05-30-apple-calendar-mcp-implementation.md  2026-05-30-mac-calendar-mcp-implementation.md  2026-05-31-public-package-rename.md
docs/superpowers/specs/: 2026-05-31-public-package-rename-design.md
overrides/: main.html
src/apple_mail_mcp/: __init__.py  config.py  server.py
tests/: test_server.py
