[project]
name = "apple-app-mcp"
version = "0.1.0"
description = "Workspace for Apple app MCP servers."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.uv]
package = false

[tool.uv.workspace]
members = [
    "packages/mac-mail-mcp",
    "packages/mac-calendar-mcp",
]

[dependency-groups]
dev = [
    "ruff>=0.14.8",
    "pytest>=9.0.3",
    "pytest-cov>=6.0",
    "pytest-asyncio>=0.24",
    "flameprof>=0.4",
]
bench = [
    "plotly[kaleido]>=6",
]
docs = [
    "pymdown-extensions>=10.21.3",
    "pygments>=2.20.0",
    "zensical==0.0.23",
]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
testpaths = [
    "packages/mac-mail-mcp/tests",
    "packages/mac-calendar-mcp/tests",
]
pythonpath = [
    "packages/mac-mail-mcp/src",
    "packages/mac-calendar-mcp/src",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
target-version = "py311"
line-length = 80
src = [
    "packages/mac-mail-mcp/src",
    "packages/mac-calendar-mcp/src",
]

[tool.ruff.lint]
select = [
    "ASYNC",
    "B",
    "E",
    "F",
    "I",
    "RUF",
    "UP",
    "W",
]
ignore = [
    "ASYNC109",  # Timeout parameter pattern is cleaner API for our use case
]

[tool.ruff.format]
docstring-code-format = true
